<resources>
    <string name="app_name">Billfold</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_user">LoginUserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Register Mobile Number</string>
    <string name="select_country">Select Country</string>
    <string name="eneter_mobile_number">Enter Mobile Number</string>
    <string name="register_user">Register User</string>
    <string name="dl_msg_registering_mob_no">Registering mobile number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="code_verification">Code Verification</string>
    <string name="user_detail">User Detail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="registering_user">Registering User</string>
    <string name="checking_for_sms">Checking for SMS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_raise_invoice">RaiseInvoiceActivity</string>
    <string name="raise_invoice">Raise Invoice</string>
    <string name="phone_number">Phone Number</string>
    <string name="bvc">BVC</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="raise">Raise</string>
    <string name="title_activity_bank_detailactivity">BankDetailactivity</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No</string>
    <string name="rounting_number">Rounting No</string>
    <string name="birth_date">Birth Date</string>
    <string name="address_detail">Address Detail</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="title_activity_get_invoice">GetInvoice</string>
    <string name="invoice_detail">Invoice Detail</string>
    <string name="title_activity_history">Transaction Summary</string>
    <string name="to">To :</string>
    <string name="amount_label">Amount :</string>
    <string name="date">Date :</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="pay">Pay</string>
    <string name="receive">Receive</string>
</resources>
