<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/raise_invoice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/raise_invoice"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/raise_invoice_textView"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/phone_comp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/phone_textView"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/phone_textView"
            android:text="*"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000" />


        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_textView"
            android:layout_marginTop="1dp"
            android:inputType="phone"
            android:singleLine="true" />

        <TextView
            android:id="@+id/bvc_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_editText"
            android:layout_marginTop="15dp"
            android:text="@string/bvc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/bvc_comp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/bvc_textView"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/bvc_textView"
            android:text="*"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000" />

        <EditText
            android:id="@+id/bvc_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bvc_textView"
            android:layout_marginTop="1dp"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true" />

        <TextView
            android:id="@+id/amount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bvc_editText"
            android:layout_marginTop="15dp"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/amount_comp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/amount_textView"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/amount_textView"
            android:text="*"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000" />

        <EditText
            android:id="@+id/amount_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amount_textView"
            android:layout_marginTop="1dp"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amount_editText"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/description_comp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/description_textView"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/description_textView"
            android:text="*"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_textView"
            android:layout_marginTop="3dp"
            android:background="@drawable/spinner_background"
            android:inputType="text"
            android:minHeight="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/raise_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_back"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/raise"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</ScrollView>
